; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs_node.c_nfs_node_set_busy4.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs_node.c_nfs_node_set_busy4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nfs_node_set_busy4(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca [4 x i32], align 16
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* %8, align 4
  %18 = load i32, i32* %9, align 4
  %19 = load i32, i32* %10, align 4
  %20 = getelementptr inbounds [4 x i32], [4 x i32]* %12, i64 0, i64 0
  %21 = call i32 @nfs_node_sort4(i32 %16, i32 %17, i32 %18, i32 %19, i32* %20, i32* %14)
  store i32 0, i32* %13, align 4
  br label %22

22:                                               ; preds = %48, %5
  %23 = load i32, i32* %13, align 4
  %24 = load i32, i32* %14, align 4
  %25 = icmp slt i32 %23, %24
  br i1 %25, label %26, label %51

26:                                               ; preds = %22
  %27 = load i32, i32* %13, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds [4 x i32], [4 x i32]* %12, i64 0, i64 %28
  %30 = load i32, i32* %29, align 4
  %31 = load i32, i32* %11, align 4
  %32 = call i32 @nfs_node_set_busy(i32 %30, i32 %31)
  store i32 %32, i32* %15, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %47

34:                                               ; preds = %26
  br label %35

35:                                               ; preds = %39, %34
  %36 = load i32, i32* %13, align 4
  %37 = add nsw i32 %36, -1
  store i32 %37, i32* %13, align 4
  %38 = icmp sge i32 %37, 0
  br i1 %38, label %39, label %45

39:                                               ; preds = %35
  %40 = load i32, i32* %13, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds [4 x i32], [4 x i32]* %12, i64 0, i64 %41
  %43 = load i32, i32* %42, align 4
  %44 = call i32 @nfs_node_clear_busy(i32 %43)
  br label %35

45:                                               ; preds = %35
  %46 = load i32, i32* %15, align 4
  store i32 %46, i32* %6, align 4
  br label %52

47:                                               ; preds = %26
  br label %48

48:                                               ; preds = %47
  %49 = load i32, i32* %13, align 4
  %50 = add nsw i32 %49, 1
  store i32 %50, i32* %13, align 4
  br label %22

51:                                               ; preds = %22
  store i32 0, i32* %6, align 4
  br label %52

52:                                               ; preds = %51, %45
  %53 = load i32, i32* %6, align 4
  ret i32 %53
}

declare dso_local i32 @nfs_node_sort4(i32, i32, i32, i32, i32*, i32*) #1

declare dso_local i32 @nfs_node_set_busy(i32, i32) #1

declare dso_local i32 @nfs_node_clear_busy(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
